just did nothing

--- a/men's collections/men's phants collections.html
+++ b/men's collections/men's phants collections.html
@@ -25,7 +25,7 @@
     <div class="formals">
         <div class="div-1">
             <div>
-                <img src="/men's collections/mens/Phants/-473Wx593H-410316899-02a-MODEL black phant.jpg" alt="" width="250"height="300"> <div class="div-text"> <h2> Price:</h2></div> <div class="price"> <h2>55$</h2> <h2><s>60$</s></h2> </div> <div class="Brand"> <h2>Brand: <div class="Brand-name"><h2> Effilo </h2></div></h2></div> <h1> Black casual</h1></div> 
+                <img src="men's collections/mens/Phants/-473Wx593H-410316899-02a-MODEL black phant.jpg" alt="" width="250"height="300"> <div class="div-text"> <h2> Price:</h2></div> <div class="price"> <h2>55$</h2> <h2><s>60$</s></h2> </div> <div class="Brand"> <h2>Brand: <div class="Brand-name"><h2> Effilo </h2></div></h2></div> <h1> Black casual</h1></div> 
                 
                 <div>
                     <img src="mens/Phants/-473Wx593H-443002269-olivegreen-MODEL phant.jpg" alt="" width="250"height="300"> <div class="div-text"> <h2> Price:</h2></div> <div class="price"> <h2>50$</h2> <h2><s>80$</s></h2> </div> <div class="Brand"> <h2>Brand: <div class="Brand-name"><h2>SoMe </h2></div></h2></div> <h1> Darkgreen Formal</h1></div>
